# pineapple

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt  Controller.cpp  IdleNode.cpp  IdleNodeTwo.cpp  Sandbox.cpp  TestClient.cpp  ZEDControl.cpp  ZEDNode.cpp  ZEDRecord.cpp  ZEDSandbox.cpp  camera_node.cpp  camera_server.cpp  controller.cpp  local_controller.cpp  node.cpp  remote_controller.cpp  topside_app.cpp
cmake/: zed.cmake
docker/: pull_zed_image.sh  run_zed_image.sh
examples/: CMakeLists.txt  playground.cpp  record.cpp  sandbox.cpp
include/Sennet-ZED/: Client.hpp  ControlLayer.hpp  Conversion.hpp  InitParameters.hpp  Messages.hpp  RecordingParameters.hpp  RuntimeParameters.hpp  SensorController.hpp  Server.hpp  Settings.hpp
include/Sennet-ZED/Panels/: ClientPanel.hpp  InitParametersPanel.hpp  RecordingParametersPanel.hpp  RuntimeParametersPanel.hpp  SensorControllerPanel.hpp
include/Sennet/ZED/: Client.hpp  ControlLayer.hpp  Controller.hpp  Conversion.hpp  IdleNode.hpp  Image.hpp  InitParameters.hpp  Messages.hpp  RecordClient.hpp  RecordServer.hpp  Recorder.hpp  RecorderNode.hpp  RecordingParameters.hpp  RuntimeParameters.hpp  SensorController.hpp  Server.hpp  Settings.hpp
include/Sennet/ZED/Layers/: ControlLayer.hpp  NetworkLayer.hpp  SensorLayer.hpp  StateLayer.hpp
include/Sennet/ZED/Messages/: Request.hpp  Response.hpp
include/Sennet/ZED/Panels/: ClientPanel.hpp  DefaultClientPanel.hpp  InitParametersPanel.hpp  RecordClientPanel.hpp  RecordingParametersPanel.hpp  RuntimeParametersPanel.hpp  SensorControllerPanel.hpp
include/Sennet/ZED/Parameters/: Conversion.hpp  InitParameters.hpp  RecordingParameters.hpp  RuntimeParameters.hpp
include/SennetZED/: Controller.hpp  IdleNode.hpp  Recorder.hpp  RecorderNode.hpp  SennetZED.hpp
include/SennetZED/Layers/: ControlLayer.hpp  DisplayLayer.hpp  NetworkLayer.hpp  SensorLayer.hpp  StateLayer.hpp
include/SennetZED/Messages/: Request.hpp  Response.hpp  ZEDMessage.hpp
include/SennetZED/Primitives/: Conversion.hpp  Settings.hpp
pineapple/: CMakeLists.txt
pineapple/include/Pineapple/: CameraControls.hpp  CameraInterface.hpp  CameraNode.hpp  CameraParameters.hpp  CameraSettings.hpp  Client.hpp  ControlLayer.hpp  Conversion.hpp  IMU.hpp  Image.hpp  InitParameters.hpp  LocalControlLayer.hpp  Message.hpp  Messages.hpp  RecordManager.hpp  RecordingParameters.hpp  RemoteControlLayer.hpp  RuntimeParameters.hpp  SensorController.hpp  SensorData.hpp  Serialization.hpp  Server.hpp  Settings.hpp  UiHelpers.hpp  UserInterface.hpp  Utils.hpp
pineapple/include/Pineapple/Panels/: ClientPanel.hpp  InitParametersPanel.hpp  RecordingParametersPanel.hpp  RuntimeParametersPanel.hpp  SensorControllerPanel.hpp
pineapple/include/Pineapple/Zed/: CameraNode.hpp  LocalControlLayer.hpp  Protocol.hpp  RecordManager.hpp  RemoteControlLayer.hpp
pineapple/include/pineapple/: common.hpp  message.hpp  serialization.hpp  ui_helpers.hpp  utils.hpp
pineapple/include/pineapple/zed/: camera_manager.hpp  local_control_layer.hpp  protocol.hpp  remote_control_layer.hpp  types.hpp
pineapple/src/: CameraInterface.cpp  CameraNode.cpp  Client.cpp  ControlLayer.cpp  Conversion.cpp  InitParameters.cpp  LocalControlLayer.cpp  RecordManager.cpp  RecordingParameters.cpp  RemoteControlLayer.cpp  RuntimeParameters.cpp  SensorController.cpp  Server.cpp  Settings.cpp  UiHelpers.cpp  UserInterface.cpp  Utils.cpp  ui_helpers.cpp  utils.cpp
pineapple/src/Panels/: ClientPanel.cpp  InitParametersPanel.cpp  RecordingParametersPanel.cpp  RuntimeParametersPanel.cpp  SensorControllerPanel.cpp
pineapple/src/Zed/: CameraNode.cpp  LocalControlLayer.cpp  RecordManager.cpp  RemoteControlLayer.cpp
pineapple/src/zed/: camera_manager.cpp  local_control_layer.cpp  protocol.cpp  remote_control_layer.cpp
resources/shaders/: Texture.glsl
scripts/: build.sh  clang-format.sh  cmake-format.sh  conan-build.sh  conan-install.sh  install-packages.sh
src/: CMakeLists.txt  Client.cpp  ControlLayer.cpp  Controller.cpp  Conversion.cpp  IdleNode.cpp  InitParameters.cpp  RecordClient.cpp  RecordServer.cpp  Recorder.cpp  RecorderNode.cpp  RecordingParameters.cpp  RuntimeParameters.cpp  SensorController.cpp  Server.cpp  Settings.cpp
src/Layers/: ControlLayer.cpp  DisplayLayer.cpp  NetworkLayer.cpp  SensorLayer.cpp  StateLayer.cpp
src/Messages/: Request.cpp  Response.cpp  ZEDMessage.cpp
src/Panels/: ClientPanel.cpp  DefaultClientPanel.cpp  InitParametersPanel.cpp  RecordClientPanel.cpp  RecordingParametersPanel.cpp  RuntimeParametersPanel.cpp  SensorControllerPanel.cpp
src/Parameters/: Conversion.cpp  InitParameters.cpp  RecordingParameters.cpp  RuntimeParameters.cpp
src/Primitives/: Conversion.cpp  IO.cpp  Settings.cpp
src/ZED/: Conversion.cpp  IO.cpp  Recorder.cpp
src/include/pineapple/: common.hpp
src/include/pineapple/zed/: camera_manager.hpp  local_control_layer.hpp  types.hpp
src/src/: ui_helpers.cpp
src/src/zed/: local_control_layer.cpp  protocol.cpp  remote_control_layer.cpp
